--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
