Added sidebar toggle icon; Made the toolbar responsive

--- a/src/components/Navigation/Sidebar/Sidebar.module.scss
+++ b/src/components/Navigation/Sidebar/Sidebar.module.scss
@@ -16,9 +16,9 @@
 }
 
 .Open {
-  transition: translateX(0);
+  transform: translateX(0);
 }
 
 .Close {
-  transition: translateX(-100%);
+  transform: translateX(-100%);
 }
