--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -23,8 +23,8 @@
 }
 
 @media screen and (min-width: 1000px) and (min-height: 700px) {
-  .Burger {
-    width: 700px;
-    height: 600px;
-  }
+  // .Burger {
+  //   width: 700px;
+  //   height: 600px;
+  // }
 }
